<resources>
    <string name="app_name">Rub-A-Dub Grub</string>
    <string name="btnEnter">Get Grub</string>
    <string name="slogan">It\'s Rub-A-Dub good Grub</string>
    <string name="todo">TODO</string>
    <string name="selection">Selection</string>
    <string name="diningSelection">Dining Selection</string>
    <string name="loading">Loading…</string>
    <string name="lunchMenu">Lunch Menu</string>
    <string name="dinnerMenu">Dinner Menu</string>
    <string name="breakfastMenu">Breakfast Menu</string>
    <string name="drinksMenu">Drinks Menu</string>
    <string name="btnAdd">Add</string>
    <string name="btnAddToOrder">Proceed</string>
    <string name="lblFullEng">Full English</string>
    <string name="btnSelection">Selection</string>
    <string name="checkout">Checkout</string>
    <string name="lblTable">Please select a Table</string>
    <string name="btnTBL1">1</string>
    <string name="btnTBL2">2</string>
    <string name="btnTBL3">3</string>
    <string name="btnTBL4">4</string>
    <string name="btnTBL5">5</string>
    <string name="lblTableSelected">Table number selected:</string>
    <string name="etxtName">Please enter your name</string>
    <string name="btnRestart">Restart Order</string>
    <string name="btnPlaceOrder">Place Order</string>
    <string name="txtQtyZero">0</string>
    <string name="lblEggsBen">Eggs Benedict</string>
    <string name="txtDetailView1">Please select meal from menu.</string>
    <string name="txtDetailView2">Please select drinks from menu</string>
    <string name="lblTotal">Total due:</string>
    <string name="lblRADOmelette">R &amp; D Omelette</string>
    <string name="lblContinetal">Continental</string>
    <string name="lblChickSalad">Chicken Salad</string>
    <string name="lblPregoRoll">Prego Roll</string>
    <string name="lblPloughmans">Ploughman\'s</string>
    <string name="lblFishGoujons">Fish goujons</string>
    <string name="lblSausAndMash">Sausage &amp; mash</string>
    <string name="lblShepsPie">Shepherds pie</string>
    <string name="lblRibEye">Ribeye Steak</string>
    <string name="lblYellTail">Yellow Tail</string>
    <string name="lblCoffeeTea">Coffee/Tea</string>
    <string name="lblCoke">Coca-Cola</string>
    <string name="lblOJ">Orange Juice</string>
    <string name="lblLager">Castle Lager</string>
    <string name="qty_meal">com.example.rub_a_dub_grub3.qty_meal</string>
    <string name="detail_meal">com.example.rub_a_dub_grub3.detail_meal</string>
    <string name="price_meal">com.example.rub_a_dub_grub3.price_meal</string>
    <string name="total_meal">com.example.rub_a_dub_grub3.total_meal</string>
    <string name="add_drinks">Add Drinks</string>
    <string name="drinksAlertTitle">Continue without adding any drinks?</string>
    <string name="breakfastAlertTitle">Continue without adding any breakfast?</string>
    <string name="lunchAlertTitle">Continue without adding any lunch?</string>
    <string name="dinnerAlertTitle">Continue without adding any dinner?</string>
    <string name="drinksAlertMsg"><b>Yes</b> to continue without drinks, <b>No</b> to edit drinks order.</string>
    <string name="breakfastAlertTMsg"><b>Yes</b> to continue without breakfast, <b>No</b> to edit breakfast order.</string>
    <string name="lunchAlertMsg"><b>Yes</b> to continue without lunch, <b>No</b> to edit lunch order.</string>
    <string name="dinnerAlertTMsg"><b>Yes</b> to continue without dinner, <b>No</b> to edit dinner order.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
